novos icones e deisgn dos cards da dashboard

--- a/repo-sprint2/site/Dashboard/index.html
+++ b/repo-sprint2/site/Dashboard/index.html
@@ -67,13 +67,11 @@
                     </div>
                     <div class="kpi_dado">
                         <h2>3</h2>
-
                     </div>
-
                 </div>
                 <div class="card">
                     <div class="kpi_titulo">
-                        <span>Temperaturas adequada</span>
+                        <span>Temperaturas adequadas</span>
                         <img src="../assets/img/Dashboard/termometro.svg" alt="">
                     </div>
                     <div class="kpi_dado">
@@ -98,38 +96,95 @@
                     </div>
                     <div class="kpi_dado">
                         <h2>3</h2>
-
                     </div>
 
                 </div>
             </div>
-            <div class="estufa_cards">
-                <div class="card">
-                    Estufa 1
+            <div class="estufa_cards ">
+                <div class="card check">
+                    <div class="kpi_titulo">
+                        <span>Estufa 1</span>
+                        <h2>20°C</h2>
+                    </div>
+                    <div class="estufa_icone ">
+                        <img src="../assets/img/Dashboard/termometro.svg" alt="" class="termometro">
+                    </div>
+                </div>
+                <div class="card danger">
+                    <div class="kpi_titulo">
+                        <span>Estufa 2</span>
+                        <h2>20°C</h2>
+                    </div>
+                    <div class="estufa_icone">
+                        <img src="../assets/img/Dashboard/TempAlta.svg" alt="" >
+                        
+                        <img src="../assets/img/Dashboard/danger.svg" alt="">
+                    </div>
+                </div>
+                <div class="card danger">
+                    <div class="kpi_titulo">
+                        <span>Estufa 3</span>
+                        <h2>20°C</h2>
+                    </div>
+                    <div class="estufa_icone">
+                        <img src="../assets/img/Dashboard/TempBaixa.svg" alt="" >
+                        
+                        <img src="../assets/img/Dashboard/danger.svg" alt="">
+                    </div>
                 </div>
                 <div class="card">
-                    Estufa 2
+                    <div class="kpi_titulo">
+                        <span>Estufa 4</span>
+                        <h2>20°C</h2>
+                    </div>
+                    <div class="estufa_icone">
+                        <img src="../assets/img/Dashboard/termometro.svg" alt="" class="termometro">
+                    </div>
                 </div>
                 <div class="card">
-                    Estufa 3
+                    <div class="kpi_titulo">
+                        <span>Estufa 5</span>
+                        <h2>20°C</h2>
+                    </div>
+                    <div class="estufa_icone">
+                        <img src="../assets/img/Dashboard/termometro.svg" alt="" class="termometro">
+                    </div>
                 </div>
                 <div class="card">
-                    Estufa 4
+                    <div class="kpi_titulo">
+                        <span>Estufa 6</span>
+                        <h2>20°C</h2>
+                    </div>
+                    <div class="estufa_icone">
+                        <img src="../assets/img/Dashboard/termometro.svg" alt="" class="termometro">
+                    </div>
                 </div>
                 <div class="card">
-                    Estufa 5
+                    <div class="kpi_titulo">
+                        <span>Estufa 7</span>
+                        <h2>20°C</h2>
+                    </div>
+                    <div class="estufa_icone">
+                        <img src="../assets/img/Dashboard/termometro.svg" alt="" class="termometro">
+                    </div>
                 </div>
                 <div class="card">
-                    Estufa 6
+                    <div class="kpi_titulo">
+                        <span>Estufa 8</span>
+                        <h2>20°C</h2>
+                    </div>
+                    <div class="estufa_icone">
+                        <img src="../assets/img/Dashboard/termometro.svg" alt="" class="termometro">
+                    </div>
                 </div>
                 <div class="card">
-                    Estufa 7
-                </div>
-                <div class="card">
-                    Estufa 8
-                </div>
-                <div class="card">
-                    Estufa 9
+                    <div class="kpi_titulo">
+                        <span>Estufa 9</span>
+                        <h2>20°C</h2>
+                    </div>
+                    <div class="estufa_icone">
+                        <img src="../assets/img/Dashboard/termometro.svg" alt="">
+                    </div>
                 </div>
             </div>
 
