--- a/repo-sprint2/site/index.html
+++ b/repo-sprint2/site/index.html
@@ -60,7 +60,7 @@
         <div class="tela-inicial">
             <div class="texto-container">
                 <p>Com a <span>ONDO</span>, o controle é <span>muito mais fácil</span>.</p>
-                <button class="btn-entenda">ENTENDA</button>
+                <a href="./projeto.html" class="btn-entenda">ENTENDA</a>
             </div>
         </div>
     </section>
@@ -71,7 +71,9 @@
                 <p id="titulo-conteudo">Sobre a ONDO</p>
                 <p id="card-texto-conteudo">Um grupo de estudantes com um desafio: criar um projeto. Amantes da culinária japonesa e envolvidos
                     na tecnologia. Conheça a ONDO.</p>
-                <button class="btn-conheca">CONHEÇA</button>
+                    <a href="./sobre-ondo.html">
+                        <button  class="btn-conheca">CONHEÇA</button>
+                    </a>
             </div>
         </div>
 
@@ -80,7 +82,9 @@
             <div class="card-content">
                 <p id="titulo-conteudo">Nossa missão</p>
                 <p id="card-texto-conteudo">Queremos facilitar o controle em plantações de wasabi. Mas como e por quê? veja nossa missão.</p>
-                <button class="btn-conheca">VER MAIS</button>
+                <a href="./missao.html">
+                    <button class="btn-conheca">VER MAIS</button>
+                </a>
             </div>
         </div>
     </section>
@@ -122,7 +126,9 @@
         </div>
 
         <div class="card-btn-ben">
-            <button class="button-ben">SABER MAIS</button>
+            <a href="./projeto.html">
+                <button class="button-ben">SABER MAIS</button>
+            </a>
         </div>
 
     </section>
@@ -142,7 +148,7 @@
                     <p>+55 11 99999-9999</p>
                 </div>
             </div>
-            <a href="#" class="ver-todos">VER TODOS</a>
+            <a href="./fale-conosco.html" class="ver-todos">VER TODOS</a>
         </div>
     </section>
 
