--- a/repo-sprint2/site/cadastro.html
+++ b/repo-sprint2/site/cadastro.html
@@ -16,46 +16,54 @@
 </head>
 <body>
     <div class="container">
-        <div class="image-section"></div>
+        <div class="image-section">
+            <img src="assets/img/image_cadastro.jpg" alt="">
+        </div>
         <a href="index.html">
             <img class="img_btn_voltar" src="assets/img/btn_voltar cadastro.png" alt="btn voltar">
         </a>
         <div class="form-container">
             <h2>CADASTRE-SE AQUI</h2>
-            
-            <div class="form-group">
-                <i class="fas fa-id-card"></i>
-                <input class="main-input" id="input_cnpj" placeholder="CNPJ" type="text" oninput="validarCNPJ()" />
+            <div class="form_cointainer_empresa">
+
+                <div class="form-group">
+                    <i class="fas fa-id-card"></i>
+                    <input class="main-input" id="input_cnpj" placeholder="CNPJ" type="text" oninput="validarCNPJ()" />
+                </div>
+                <div class="form-group">
+                    <i class="fas fa-building"></i>
+                    <input class="main-input" id="input_razao_social" placeholder="Razão social" type="text" oninput="validarRazaoSocial()" />
+                </div>
+                <div class="form-group">
+                    <i class="fas fa-industry"></i>
+                    <input class="main-input" id="input_nome_fantasia" placeholder="Nome fantasia" type="text" oninput="validarNomeFantasia()" />
+                </div>
+                <div class="form-group">
+                    <i class="fas fa-user-tie"></i>
+                    <input class="main-input" id="input_responsavel" placeholder="Responsável" type="text" oninput="validarResponsavel()" />
+                </div>
+                <div class="form-group">
+                    <i class="fas fa-envelope"></i>
+                    <input class="main-input" id="input_email" placeholder="E-mail" type="text" oninput="validarEmail()" />
+                </div>
+                <div class="form-group">
+                    <i class="fas fa-lock"></i>
+                    <input class="main-input" id="input_senha" placeholder="Senha" type="password" oninput="validarSenha()" />
+                </div>
+
             </div>
-            <div class="form-group">
-                <i class="fas fa-building"></i>
-                <input class="main-input" id="input_razao_social" placeholder="Razão social" type="text" oninput="validarRazaoSocial()" />
-            </div>
-            <div class="form-group">
-                <i class="fas fa-industry"></i>
-                <input class="main-input" id="input_nome_fantasia" placeholder="Nome fantasia" type="text" oninput="validarNomeFantasia()" />
-            </div>
-            <div class="form-group">
-                <i class="fas fa-user-tie"></i>
-                <input class="main-input" id="input_responsavel" placeholder="Responsável" type="text" oninput="validarResponsavel()" />
-            </div>
-            <div class="form-group">
-                <i class="fas fa-envelope"></i>
-                <input class="main-input" id="input_email" placeholder="E-mail" type="text" oninput="validarEmail()" />
-            </div>
-            <div class="form-group">
-                <i class="fas fa-lock"></i>
-                <input class="main-input" id="input_senha" placeholder="Senha" type="password" oninput="validarSenha()" />
-            </div>
+
             <br>
             <span style="margin-left: 130px;"><b>Endereço:</b></span> <br>
-            <div class="form-group">
-                <input class="endereco-input" id="input_cep" placeholder="CEP" type="text" style=" margin-left: 130px; width: 100px; margin-right: 10px; margin-bottom: 10px;" oninput="validarCEP()" />
-                <input class="endereco-input" id="input_bairro" placeholder="Bairro" type="text" style="width: 345px; margin-left: 0px;" oninput="validarBairro()" />
-                <input class="endereco-input" id="input_logradouro" placeholder="Logradouro" type="text" style=" margin-left: 130px; margin-bottom: 10px; width: 480px;" oninput="validarRua()" />
-                <input class="endereco-input" id="input_cidade" placeholder="Cidade" type="text" style=" margin-left: 130px;  width:345px; margin-right: 11px;" oninput="validarCidade()" />
-                <input class="endereco-input" id="input_estado" placeholder="UF" type="text" style="width: 100px; margin-left: 0px;" oninput="validarEstado()" /> 
-            </div><br>
+            <div class="form_container_endereco">
+                <div class="form-group">
+                    <input class="endereco-input" id="input_cep" placeholder="CEP" type="text"  oninput="validarCEP()" />
+                    <input class="endereco-input" id="input_bairro" placeholder="Bairro"  type="text" oninput="validarBairro()" />
+                    <input class="endereco-input" id="input_logradouro" placeholder="Logradouro" type="text"  oninput="validarRua()" />
+                    <input class="endereco-input" id="input_cidade" placeholder="Cidade" type="text" oninput="validarCidade()" />
+                    <input class="endereco-input" id="input_estado" placeholder="UF" type="text"  oninput="validarEstado()" /> 
+                </div><br>
+            </div>
             <div id="div_mensagem"></div>
             <div class="form-group">
                 <button id="btn_cadastrar" onclick="cadastrar()" type="button">CADASTRE-SE</button>
