--- a/repo-sprint2/site/index.html
+++ b/repo-sprint2/site/index.html
@@ -106,7 +106,7 @@
                 <div id="image-box">
                     <img src="./assets/img/grafico.png" alt="">
                 </div>
-                <div id="text-box">Graficos que permitem ter uma melhor analise e tomar decisões.</div>
+                <div id="text-box">Gráficos que permitem uma análise mais eficaz para tomada de decisões</div>
             </div>
 
             <div id="box">
@@ -143,7 +143,7 @@
                 </div>
                 <div class="divisor"></div>
                 <div class="coluna-contato">
-                    <p id="titulo-conteudo-contato">Para comprar nosso sistema</p>
+                    <p id="titulo-conteudo-contato">Para obter nosso sistema</p>
                     <p>ondoVendas@agro.com</p>
                     <p>+55 11 99999-9999</p>
                 </div>
