--- a/repo-sprint2/site/index.html
+++ b/repo-sprint2/site/index.html
@@ -81,7 +81,7 @@
             <img src="https://images.stockcake.com/public/2/d/d/2dd29475-9650-4e00-8e04-c494a5e42837/drone-over-plants-stockcake.jpg" alt="Nossa missão" class="card-image">
             <div class="card-content">
                 <p id="titulo-conteudo">Nossa missão</p>
-                <p id="card-texto-conteudo">Queremos facilitar o controle em plantações de wasabi. Mas como e por quê? veja nossa missão.</p>
+                <p id="card-texto-conteudo">Simplificar o controle de temperatura das plantações de wasabi. Quer saber como e por quê? Descubra <b>nossa missão</b>.</p>
                 <a href="./missao.html">
                     <button class="btn-conheca">VER MAIS</button>
                 </a>
