Ajustes no banco de dados e na tela de grafico e index

--- a/repo-sprint2/site/Dashboard/graficos.html
+++ b/repo-sprint2/site/Dashboard/graficos.html
@@ -59,7 +59,7 @@
     <div class="boasVindas">
       <div class="container">
         <h3>Graficos - Estufa 1</h3>
-        <h5>Bem vindo, John Don</h5>
+        <h5>Bem vindo, Frizza</h5>
       </div>
     </div>
     <div class="content">
@@ -70,7 +70,7 @@
             <img src="../assets/img/Dashboard/termometro.svg" alt="">
           </div>
           <div class="kpi_dado">
-            <h2 id="h2_temperatura_real">18°</h2>
+            <h2 id="h2_temperatura_real">18°C</h2>
           </div>
         </div>
         <div class="card">
@@ -89,7 +89,7 @@
             <img src="../assets/img/Dashboard/TempAlta.svg" alt="">
           </div>
           <div class="kpi_dado">
-            <h2>22°</h2>
+            <h2>22°C</h2>
           </div>
 
         </div>
@@ -99,7 +99,7 @@
             <img src="../assets/img/Dashboard/TempBaixa.svg" alt="">
           </div>
           <div class="kpi_dado">
-            <h2>10°</h2>
+            <h2>10°C</h2>
           </div>
 
         </div>
