--- a/repo-sprint2/site/Dashboard/index.html
+++ b/repo-sprint2/site/Dashboard/index.html
@@ -55,7 +55,7 @@
         <div class="boasVindas">
             <div class="container">
                 <h3>Inicio</h3>
-                <h5>Bem vindo, John Don</h5>
+                <h5>Bem vindo, Frizza</h5>
             </div>
         </div>
         <div class="content">
@@ -100,15 +100,17 @@
                 </div>
             </div>
             <div class="estufa_cards ">
-                <div class="card check">
-                    <div class="kpi_titulo">
-                        <span>Estufa 1</span>
-                        <h2 id="h2_temperatura_real" >20°C</h2>
+                <a href="./graficos.html" style="width: 29.5%;">
+                    <div class="card check" style="width: 100%;">
+                        <div class="kpi_titulo">
+                            <span>Estufa 1</span>
+                            <h2 id="h2_temperatura_real" >20°C</h2>
+                        </div>
+                        <div class="estufa_icone ">
+                            <img src="../assets/img/Dashboard/termometro.svg" alt="" class="termometro">
+                        </div>
                     </div>
-                    <div class="estufa_icone ">
-                        <img src="../assets/img/Dashboard/termometro.svg" alt="" class="termometro">
-                    </div>
-                </div>
+                </a>
                 <div class="card danger">
                     <div class="kpi_titulo">
                         <span>Estufa 2</span>
