tirando btn do login

--- a/repo-sprint2/site/login.html
+++ b/repo-sprint2/site/login.html
@@ -28,7 +28,7 @@
           <img src="assets/img/password.png" alt="">
           <input oninput="validarSenha()" id="ipt_senha" type="password" placeholder="Senha">
         </div>
-        <a class="texSenha" href="#">Esqueceu sua senha?<span class="texSpan"> Clique aqui.</span></a>
+        <a class="texSenha" style="display: none;" href="#">Esqueceu sua senha?<span class="texSpan"> Clique aqui.</span></a>
       </div>
       <div class="container-btn">
         <button onclick="login()" class="btn_entrar">Entrar</button>
