--- a/repo-sprint2/site/Dashboard/graficos.html
+++ b/repo-sprint2/site/Dashboard/graficos.html
@@ -32,21 +32,21 @@
           </div>
           <a href="graficos.html">Graficos</a>
         </li>
-        <li class="menu_item">
+        <li class="menu_item disable">
           <div class="container_img disable">
             <img src="../assets/img/Dashboard/bell-regular_branco.svg" alt="">
           </div>
           <a href="notificacao.html">Notificação</a>
         </li>
 
-        <li class="menu_item">
+        <li class="menu_item disable">
           <div class="container_img disable">
             <img src="../assets/img/Dashboard/info_branco.svg" alt="">
           </div>
           <a href="help.html">Ajuda e Suporte</a>
         </li>
 
-        <li class="menu_item">
+        <li class="menu_item disable">
           <div class="container_img disable">
             <img src="../assets/img/Dashboard/sair.svg" alt="">
           </div>
