--- a/repo-sprint2/site/Dashboard/index.html
+++ b/repo-sprint2/site/Dashboard/index.html
@@ -23,27 +23,27 @@
                     <a href="./index.html">Home</a>
                 </li>
                 <li class="menu_item">
-                    <div class="container_img disable" style="height: 25px;">
+                    <div class="container_img " style="height: 25px;">
                         <img src="../assets/img/Dashboard/chart-line-solid_branco.svg" alt="">
                     </div>
                     <a href="graficos.html">Graficos</a>
                 </li>
-                <li class="menu_item">
-                    <div class="container_img disable">
+                <li class="menu_item disable" >
+                    <div class="container_img ">
                         <img src="../assets/img/Dashboard/bell-regular_branco.svg" alt="">
                     </div>
                     <a href="notificacao.html">Notificação</a>
                 </li>
 
-                <li class="menu_item">
-                    <div class="container_img disable">
+                <li class="menu_item disable" >
+                    <div class="container_img ">
                         <img src="../assets/img/Dashboard/info_branco.svg" alt="">
                     </div>
                     <a href="help.html">Ajuda e Suporte</a>
                 </li>
 
-                <li class="menu_item">
-                    <div class="container_img disable">
+                <li class="menu_item disable">
+                    <div class="container_img ">
                         <img src="../assets/img/Dashboard/sair.svg" alt="">
                     </div>
                     <a href="../index.html">Sair</a>
