ajustes nos dados dos graficos e kpis, layout da calculadora

--- a/repo-sprint2/site/Dashboard/graficos.html
+++ b/repo-sprint2/site/Dashboard/graficos.html
@@ -186,7 +186,7 @@
       plugins: {
         title: {
           display: true, // Define se o título deve ser exibido
-          text: "Análise de Temperaturas", // O texto do título
+          text: "Visão Geral das Temperaturas", // O texto do título
           font: {
             size: 20, // Tamanho da fonte do título
             weight: "bold", // Peso da fonte do título
@@ -210,7 +210,6 @@
       datasets: [
         {
           label: "Temperatura",
-
           borderWidth: 1,
         },
       ],
@@ -219,7 +218,7 @@
       plugins: {
         title: {
           display: true, // Define se o título deve ser exibido
-          text: "Análise de Temperaturas", // O texto do título
+          text: "Variação Horária de Temperatura", // O texto do título
           font: {
             size: 20, // Tamanho da fonte do título
             weight: "bold", // Peso da fonte do título
@@ -310,8 +309,6 @@
     },
     plugins: [ChartDataLabels]
   });
-
-
 
   var paginacao = {};
   var tempo = {};
