--- a/repo-sprint2/site/Dashboard/index.html
+++ b/repo-sprint2/site/Dashboard/index.html
@@ -125,7 +125,7 @@
                 <div class="card danger">
                     <div class="kpi_titulo">
                         <span>Estufa 3</span>
-                        <h2>8°C</h2>
+                        <h2>7°C</h2>
                     </div>
                     <div class="estufa_icone">
                         <img src="../assets/img/Dashboard/TempBaixa.svg" alt="" >
@@ -133,7 +133,7 @@
                         <img src="../assets/img/Dashboard/danger.svg" alt="">
                     </div>
                 </div>
-                <div class="card">
+                <!-- <div class="card">
                     <div class="kpi_titulo">
                         <span>Estufa 4</span>
                         <h2>20°C</h2>
@@ -141,8 +141,8 @@
                     <div class="estufa_icone">
                         <img src="../assets/img/Dashboard/termometro.svg" alt="" class="termometro">
                     </div>
-                </div>
-                <div class="card">
+                </div> -->
+                <!-- <div class="card">
                     <div class="kpi_titulo">
                         <span>Estufa 5</span>
                         <h2>20°C</h2>
@@ -186,7 +186,7 @@
                     <div class="estufa_icone">
                         <img src="../assets/img/Dashboard/termometro.svg" alt="">
                     </div>
-                </div>
+                </div> -->
             </div>
 
         </div>
