Desenvolvimento dos ultimos alertas

--- a/repo-sprint2/site/Dashboard/graficos.html
+++ b/repo-sprint2/site/Dashboard/graficos.html
@@ -70,7 +70,7 @@
             <img src="../assets/img/Dashboard/termometro.svg" alt="">
           </div>
           <div class="kpi_dado">
-            <h2 id="h2_temperatura_real">18°C</h2>
+            <h2 id="h2_temperatura_real">20°C</h2>
           </div>
         </div>
         <div class="card">
@@ -144,11 +144,45 @@
       <div class="grafico_cards">
         <canvas class="grafico" id="grafico_linha"></canvas>
       </div>
-      <div class="notificacoes_recentes">
-        <div class="notificacao">
 
+      <section class="notificacoes_recentes">
+        <div class="titulos">
+          <span>NO</span>
+          <span>ID Alerta</span>
+          <span>Localização</span>
+          <span>Data</span>
+          <span>Hora</span>
+          <span>Tipo</span>
+          <span>Status</span>
         </div>
-      </div>
+        <div class="dados">
+          <span>1</span>
+          <span>281863</span>
+          <span>Principal</span>
+          <span>10/10/2024</span>
+          <span>09:30</span>
+          <span>Em Zona de Alerta</span>
+          <span>Sob Observação</span>
+        </div>
+        <div class="dados">
+          <span>2</span>
+          <span>281874</span>
+          <span>Principal</span>
+          <span>10/10/2024</span>
+          <span>10:30</span>
+          <span>Limite Excedido</span>
+          <span>Cuidado</span>
+        </div>
+        <div class="dados">
+          <span>3</span>
+          <span>281884</span>
+          <span>Principal</span>
+          <span>10/10/2024</span>
+          <span>12:30</span>
+          <span>Dentro do Padrão</span>
+          <span>Estável</span>
+        </div>
+      </section>
     </div>
   </main>
 </body>
