--- a/repo-sprint2/site/Dashboard/index.html
+++ b/repo-sprint2/site/Dashboard/index.html
@@ -42,7 +42,7 @@
                     <a href="help.html">Ajuda e Suporte</a>
                 </li>
 
-                <li class="menu_item disable">
+                <li class="menu_item">
                     <div class="container_img ">
                         <img src="../assets/img/Dashboard/sair.svg" alt="">
                     </div>
