atualização do botao da calculadora

--- a/repo-sprint2/site/calculadora.html
+++ b/repo-sprint2/site/calculadora.html
@@ -86,8 +86,10 @@
             </div>
             <!-- Botões que chamam a função -->
             <div class="container_btn">
-                <Button class="btn_lucro" onclick="VerLucro()">LUCRO COM SISTEMA</Button>
-                <Button class="btn_gastos" onclick="CalcularSem()">LUCRO SEM SISTEMA</Button>
+                <!-- <Button class="btn_lucro" onclick="VerLucro()">LUCRO COM SISTEMA</Button> -->
+                <!-- <Button class="btn_gastos" onclick="CalcularSem()">LUCRO SEM SISTEMA</Button> -->
+                <Button class="btn_gastos" onclick="CalcularSem()">Calcular</Button>
+
                 <Button class="btn_reset" onclick="Redefinir()">REDEFINIR</Button>
             </div>
         </div>
