--- a/repo-sprint2/site/login.html
+++ b/repo-sprint2/site/login.html
@@ -134,6 +134,7 @@
     if(isEmail && isSenha){
       if (email == "frizza@sptec.school" && senha == "urubu100") {
         alert("Login Success")
+        //window.location.replace('')
       } else {
         alert("senha ou email errado")
       }
