--- a/repo-sprint2/site/cadastro.html
+++ b/repo-sprint2/site/cadastro.html
@@ -73,7 +73,7 @@
                 </div>
                     <button class="btn_acao" onclick="voltar()">Voltar</button>
                 <div class="form-group">
-                    <button id="btn_cadastrar" onclick="cadastrar()" type="button">CADASTRE-SE</button>
+                    <button id="btn_cadastrar" onclick="cadastrar()" type="button"><a href="./login.html" style="color: white;"> CADASTRE-SE</a></button>
                 </div>
             </div>
             <div id="div_mensagem"></div>
